# bibtex-normalizer

./: .gitignore  README.md
bibliography/: references.bib  references_normalized.bib
bibtex-normalizer/: README.md  pyproject.toml
bibtex-normalizer/src/bibtex_normalizer/: __init__.py  __main__.py  cli.py  processor.py
src/bibtex_normalizer/: capitalizer.py  cli.py  config.py  processor.py
